--- a/packages/freya-button/lib/styles.css
+++ b/packages/freya-button/lib/styles.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: #05b169;
+  background-color: red;
   border-radius: 0.25rem;
   border: 1px solid #05b169;
   color: #fff;
